--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.0.3'
+		kotlinVersion = '1.1-M03'
 		springBootVersion = '1.4.1.RELEASE'
 	}
 	repositories {
 		mavenCentral()
+		maven { "http://dl.bintray.com/kotlin/kotlin-eap-1.1" }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -13,7 +14,6 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
-apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
 
 jar {
