--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,11 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-web')
+	// Kotlin
 	compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
+	// Spring Boot
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	// Test
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
