--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,31 @@
 buildscript {
-	ext {
-		kotlinVersion = '1.1-M03'
-		springBootVersion = '1.4.1.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-		maven { "http://dl.bintray.com/kotlin/kotlin-eap-1.1" }
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-	}
+    ext {
+        kotlinVersion = '1.0.5'
+        springBootVersion = '1.4.1.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+    }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'spring-boot'
 
 jar {
-	baseName = 'ToDo'
-	version = '0.0.1-SNAPSHOT'
+    baseName = 'ToDo'
+    version = '0.0.1-SNAPSHOT'
 }
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
-
 dependencies {
-	// Kotlin
-	compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
-	// Spring Boot
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	// Test
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
