--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,11 @@ repositories {
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web')
+    // Kotlin
     compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
+    // Spring
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    // Test
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
