--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
 
@@ -20,6 +21,9 @@ jar {
     baseName = 'ToDo'
     version = '0.0.1-SNAPSHOT'
 }
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -30,9 +34,15 @@ dependencies {
     // Kotlin
     compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
     // Spring
-    compile('org.springframework.boot:spring-boot-starter-web')
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
     // Database
-    compile("com.h2database:h2")
+    //compile("com.h2database:h2")
+    compile("org.hsqldb:hsqldb")
     // Test
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.2.1'
 }
